--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Options -MultiViews
 RewriteEngine On
 
-RewriteBase /imsystems/
+RewriteBase /Invoicing-Management-System/
 
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
