adding escpos-php printer

--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"phpoffice/phpspreadsheet": "^1.4"
+		"phpoffice/phpspreadsheet": "^1.4",
+		"mike42/escpos-php": "^3.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
 		"phpunit/phpunit": "4.* || 5.*"
 	}
 }
